--- a/AssociationDemo/AssociationDemo/AssociationDemo.csproj
+++ b/AssociationDemo/AssociationDemo/AssociationDemo.csproj
@@ -141,6 +141,9 @@
     <Compile Include="Models\Database\Department.cs">
       <DependentUpon>UMSDB.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\Database\Entity\DepartmentModel.cs" />
+    <Compile Include="Models\Database\Entity\DepartmentStudentModel.cs" />
+    <Compile Include="Models\Database\Entity\StudentModel.cs" />
     <Compile Include="Models\Database\Student.cs">
       <DependentUpon>UMSDB.tt</DependentUpon>
     </Compile>
