--- a/AssociationDemo/AssociationDemo/AssociationDemo.csproj
+++ b/AssociationDemo/AssociationDemo/AssociationDemo.csproj
@@ -131,6 +131,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Auth\AdminAccess.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -152,6 +153,9 @@
     <Compile Include="Models\Database\Entity\StudentModel.cs" />
     <Compile Include="Models\Database\Entity\UserModel.cs" />
     <Compile Include="Models\Database\Student.cs">
+      <DependentUpon>UMSDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Database\sysdiagram.cs">
       <DependentUpon>UMSDB.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Database\UMSDB.Context.cs">
@@ -228,6 +232,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Dashboard.cshtml" />
+    <Content Include="Views\Home\AllUsers.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
